--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <nav id="header">
             <div class="nav-logo">
-                <p class="nav-name">Jeewantha Sandeepa</p>
+                <p class="nav-name">H.A.J Sandeepa</p>
             </div>
             <div class="nav-menu" id="myNavMenu">
                 <ul class="nav_menu_list">
